--- a/home.html
+++ b/home.html
@@ -4,56 +4,37 @@
 	<link rel="shortcut icon" sizes="16x16 32x32 64x64" href="https://nomadcoders.co/m.png"/>
 	<title>Home - My first website.</title>
 	<style>
-        html {
-            background-color: tomato;
-        }
-
         body {
+            height: 100vh;
             margin: 20px;
-            padding: 20px;
-            background-color: thistle;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            flex-direction: column;
         }
 
         div {
-            padding: 10px;
-        }
-
-        #first {
-            background-color: whitesmoke;
-            width: 150px;
-            height: 150px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 28px;
+            color: white;
+            width: 300px;
+            height: 300px;
+            background-color: teal;
         }
 
         #second {
-            background-color: teal;
-            width: 100px;
-            height: 100px;
-        }
-
-        #third {
             background-color: wheat;
-            width: 50px;
-            height: 50px;
         }
 
-        #fourth {
-            background-color: blanchedalmond;
-            width: 25px;
-            height: 25px;
-        }
 	</style>
 	<meta name="description" content="This is website"/>
 	<meta charset="UTF-8"/>
 </head>
 <body>
-<div id="first">
-	<div id="second">
-		<div id="third">
-			<div id="fourth">
-
-			</div>
-		</div>
-	</div>
-</div>
+<div>1</div>
+<div id="second">2</div>
+<div>3</div>
 </body>
 </html>
