--- a/home.html
+++ b/home.html
@@ -5,26 +5,23 @@
 	<title>Home - My first website.</title>
 	<style>
         body {
-            height: 100vh;
+            height: 1000vh;
             margin: 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            flex-direction: column;
         }
 
         div {
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-size: 28px;
             color: white;
             width: 300px;
             height: 300px;
             background-color: teal;
         }
 
-        #second {
+        #green {
+            position: fixed;
+            opacity: 0.2;
+        }
+
+        #different {
             background-color: wheat;
         }
 
@@ -33,8 +30,7 @@
 	<meta charset="UTF-8"/>
 </head>
 <body>
-<div>1</div>
-<div id="second">2</div>
-<div>3</div>
+<div id="green"></div>
+<div id="different"></div>
 </body>
 </html>
