--- a/home.html
+++ b/home.html
@@ -10,19 +10,18 @@
         }
 
         div {
-            color: white;
             width: 300px;
             height: 300px;
-            background-color: teal;
-        }
-
-        #green {
-            position: fixed;
-            opacity: 0.2;
-        }
-
-        #different {
             background-color: wheat;
+            position: relative;
+        }
+
+        .green {
+            background-color: teal;
+            height: 100px;
+            position: absolute;
+            top: 0;
+            width: 100px;
         }
 
 	</style>
@@ -30,7 +29,10 @@
 	<meta charset="UTF-8"/>
 </head>
 <body>
-<div id="green"></div>
-<div id="different"></div>
+<div>
+	<div class="green">
+
+	</div>
+</div>
 </body>
 </html>
