--- a/home.html
+++ b/home.html
@@ -10,18 +10,18 @@
         }
 
         div {
-            width: 300px;
-            height: 300px;
+            width: 150px;
+            height: 150px;
             background-color: wheat;
             position: relative;
         }
 
-        .green {
+        span {
+            background-color: tomato;
+        }
+
+        span:nth-child(5n+1) {
             background-color: teal;
-            height: 100px;
-            position: absolute;
-            top: 0;
-            width: 100px;
         }
 
 	</style>
@@ -29,10 +29,17 @@
 	<meta charset="UTF-8"/>
 </head>
 <body>
-<div>
-	<div class="green">
-
-	</div>
-</div>
+<span>hello</span>
+<span>hello</span>
+<span>hello</span>
+<span>hello</span>
+<span>hello</span>
+<span>hello</span>
+<span>hello</span>
+<span>hello</span>
+<span>hello</span>
+<span>hello</span>
+<span>hello</span>
+<span>hello</span>
 </body>
 </html>
