--- a/home.html
+++ b/home.html
@@ -1,36 +1,52 @@
-<!DOCTYPE html>
-<html lang="kr">
+<!doctype html>
+<html lang="ko">
 <head>
-	<link rel="shortcut icon" sizes="16x16 32x32 64x64" href="https://nomadcoders.co/m.png"/>
-	<title>Home - My first website.</title>
+	<meta charset="UTF-8">
+	<meta name="viewport"
+	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=chrome">
+	<title>Document</title>
 	<style>
-        :root {
-            --main-color: #fcce00;
-            --default-border: 1px solid var(--main-color)
-        }
-
         body {
-            height: 1000vh;
-            margin: 50px;
+            display: flex;
+            height: 100vh;
+            align-items: center;
+            justify-content: center;
         }
 
-        p {
-            background-color: var(--main-color);
+        @keyframes superSexyCoinFlip {
+            0% {
+                transform: rotateY(0);
+            }
+            25% {
+                transform: scale(2);
+            }
+            50% {
+                border-radius: 0px;
+                transform: rotateY(180deg) translateY(-100px);
+                border-color: tomato;
+            }
+            75% {
+                transform: rotateY(0);
+                border-radius: 20px;
+            }
+            100% {
+                transform: rotateY(0) translateX(0);
+                opacity: 0;
+            }
         }
 
-        a {
-            color: var(--main-color);
-            border: var(--default-border)
+        img {
+            border: 10px solid black;
+            border-radius: 50%;
+            animation: superSexyCoinFlip 3s ease-in-out infinite;
         }
+
+
 	</style>
-	<meta name="description" content="This is website"/>
-	<meta charset="UTF-8"/>
 </head>
 <body>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam animi at corporis cum expedita explicabo fugiat in
-	incidunt modi nam natus, nihil nobis nulla odit rerum saepe sequi, voluptas voluptate.</p>
-<div>
-	<a href="">website</a>
-</div>
+<img src="https://nomadcoders.co/m.svg" alt="">
+<span>adawdawdaw</span>
 </body>
 </html>
