--- a/home.html
+++ b/home.html
@@ -4,49 +4,10 @@
 	<meta charset="UTF-8">
 	<meta name="viewport"
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=chrome">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Document</title>
-	<style>
-        body {
-            display: flex;
-            height: 100vh;
-            align-items: center;
-            justify-content: center;
-        }
-
-        @keyframes superSexyCoinFlip {
-            0% {
-                transform: rotateY(0);
-            }
-            25% {
-                transform: scale(2);
-            }
-            50% {
-                border-radius: 0px;
-                transform: rotateY(180deg) translateY(-100px);
-                border-color: tomato;
-            }
-            75% {
-                transform: rotateY(0);
-                border-radius: 20px;
-            }
-            100% {
-                transform: rotateY(0) translateX(0);
-                opacity: 0;
-            }
-        }
-
-        img {
-            border: 10px solid black;
-            border-radius: 50%;
-            animation: superSexyCoinFlip 3s ease-in-out infinite;
-        }
-
-
-	</style>
 </head>
 <body>
-<img src="https://nomadcoders.co/m.svg" alt="">
-<span>adawdawdaw</span>
+
 </body>
 </html>
