--- a/friends.html
+++ b/friends.html
@@ -25,6 +25,53 @@
 	</div>
 </div>
 
+<header class="screen-header">
+	<h1 class="screen-header_title">Friends</h1>
+	<div class="screen-header_icons">
+		<span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+		<span><i class="fa-solid fa-music fa-lg"></i></span>
+		<span><i class="fa-solid fa-gear fa-lg"></i></span>
+	</div>
+</header>
+
+<a href="" id="friends-display-link">
+	<i class="fa-solid fa-circle-info"></i>
+	Friends' Names Display
+	<i class="fa-solid fa-chevron-right fa-xs"></i>
+</a>
+
+<main class="friends_screen">
+	<div class="user-component">
+		<div class="user-component__column">
+			<img class="user-component__avatar user-component__avatar--xl" src="lion.png" alt="">
+			<div class="user-component__text">
+				<h4 class="user-component__title">Mane</h4>
+				<!--			<h6 class="user-component__subtitle">this text whatever</h6>-->
+			</div>
+		</div>
+		<div class="user-component__column"></div>
+	</div>
+	<div class="friends-screen__channel">
+		<div class="friends-screen__channel-header">
+			<span>Channel</span>
+			<i class="fa-solid fa-chevron-up fa-xs"></i>
+		</div>
+		<div class="user-component">
+			<div class="user-component__column">
+				<img class="user-component__avatar user-component__avatar--sm" src="lion.png" alt="">
+				<div class="user-component__text">
+					<h4 class="user-component__title user-component__title--not-bold">Channel</h4>
+					<!--			<h6 class="user-component__subtitle">this text whatever</h6>-->
+				</div>
+			</div>
+			<div class="user-component__column">
+				<span>2</span>
+				<i class="fa-solid fa-chevron-right fa-xs"></i>
+			</div>
+		</div>
+	</div>
+</main>
+
 <nav class="nav">
 	<ul class="nav__list">
 		<li class="nav__btn">
