--- a/chats.html
+++ b/chats.html
@@ -6,7 +6,7 @@
 	<meta name="viewport"
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Freinds - Kokoa Talk</title>
+	<title>Chats - Kokoa Talk</title>
 </head>
 <body>
 <div class="status-bar">
@@ -26,50 +26,27 @@
 </div>
 
 <header class="screen-header">
-	<h1 class="screen-header_title">Friends</h1>
+	<h1 class="screen-header_title">Chats</h1>
 	<div class="screen-header_icons">
 		<span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+		<span><i class="far fa-comment-dots fa-lg"></i></span>
 		<span><i class="fa-solid fa-music fa-lg"></i></span>
 		<span><i class="fa-solid fa-gear fa-lg"></i></span>
 	</div>
 </header>
 
-<a href="" id="friends-display-link">
-	<i class="fa-solid fa-circle-info"></i>
-	Friends' Names Display
-	<i class="fa-solid fa-chevron-right fa-xs"></i>
-</a>
-
-<main class="friends_screen">
+<main class="main_screen">
 	<div class="user-component">
 		<div class="user-component__column">
-			<img class="user-component__avatar user-component__avatar--xl" src="lion.png" alt="">
+			<img class="user-component__avatar" src="lion.png" alt="">
 			<div class="user-component__text">
 				<h4 class="user-component__title">Mane</h4>
-				<!--			<h6 class="user-component__subtitle">this text whatever</h6>-->
+				<h6 class="user-component__subtitle">Please check My Kokoa Account Info</h6>
 			</div>
 		</div>
-		<div class="user-component__column"></div>
-	</div>
-	<div class="friends-screen__channel">
-		<div class="friends-screen__channel-header">
-			<span>Channel</span>
-			<i class="fa-solid fa-chevron-up fa-xs"></i>
-		</div>
-		<div class="user-component">
-			<div class="user-component__column">
-				<img class="user-component__avatar user-component__avatar--sm" src="lion.png" alt="">
-				<div class="user-component__text">
-					<h4 class="user-component__title user-component__title--not-bold">Channel</h4>
-					<!--			<h6 class="user-component__subtitle">this text whatever</h6>-->
-				</div>
-			</div>
-			<div class="user-component__column">
-				<div>
-					<span>2</span>
-					<i class="fa-solid fa-chevron-right fa-xs"></i>
-				</div>
-			</div>
+		<div class="user-component__column">
+			<span class="user-component__time">21:22</span>
+			<div class="badge">1</div>
 		</div>
 	</div>
 </main>
@@ -78,23 +55,23 @@
 	<ul class="nav__list">
 		<li class="nav__btn">
 			<a class="nav__link" href="friends.html">
-				<i class="fa-solid fa-user fa-2x"></i>
+				<i class="far fa-user fa-2x"></i>
 			</a>
 		</li>
 		<li class="nav__btn">
 			<a class="nav__link" href="chats.html">
 				<span class="nav__notification badge">1</span>
-				<i class="far fa-comment fa-2x"></i>
+				<i class="fa-solid fa-comment fa-2x"></i>
 			</a>
 		</li>
 		<!--fa-solid fa-comment fa-lg-->
 		<li class="nav__btn">
-			<a class="nav__link" href="#">
+			<a class="nav__link" href="find.html">
 				<i class="fa-solid fa-magnifying-glass fa-2x"></i>
 			</a>
 		</li>
 		<li class="nav__btn">
-			<a class="nav__link" href="#">
+			<a class="nav__link" href="more.html">
 				<span class="nav__ellipse"></span>
 				<i class="fa-solid fa-ellipsis fa-2x"></i>
 			</a>
