Find Screen 2 - recommended friends

--- a/find.html
+++ b/find.html
@@ -42,6 +42,11 @@
 		<div class="find-icons__icon"><i class="fa-solid fa-fingerprint"></i><span>Add by ID</span></div>
 		<div class="find-icons__icon"><i class="fa-regular fa-envelope"></i><span>Invite</span></div>
 	</div>
+
+	<div class="recommended-friends">
+		<h6 class="recommended-friends__title">Recommended Friends</h6>
+		<span>You have no recommended friends.</span>
+	</div>
 </main>
 
 <nav class="nav">
