--- a/more.html
+++ b/more.html
@@ -6,7 +6,7 @@
 	<meta name="viewport"
 	      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>Find - Kokoa Talk</title>
+	<title>More - Kokoa Talk</title>
 </head>
 <body>
 <div class="status-bar">
@@ -26,49 +26,41 @@
 </div>
 
 <header class="screen-header">
-	<h1 class="screen-header_title">Find</h1>
+	<h1 class="screen-header_title">More</h1>
 	<div class="screen-header_icons">
 		<span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
+		<span><i class="fa-solid fa-music fa-lg"></i></span>
 		<span><i class="fa-solid fa-gear fa-lg"></i>
 			<div class="point"></div>
 		</span>
 	</div>
 </header>
 
-<main class="main_screen">
-	<div class="icon-row">
-		<div class="icon-row__icon"><i class="fa-solid fa-qrcode"></i><span>QR Code</span></div>
-		<div class="icon-row__icon"><i class="far fa-address-book"></i><span>Add by Contacts</span></div>
-		<div class="icon-row__icon"><i class="fa-solid fa-fingerprint"></i><span>Add by ID</span></div>
-		<div class="icon-row__icon"><i class="fa-regular fa-envelope"></i><span>Invite</span></div>
-	</div>
-
-	<div class="recommended-friends">
-		<h6 class="recommended-friends__title">Recommended Friends</h6>
-		<span>You have no recommended friends.</span>
-	</div>
-	<div class="open-chat">
-		<div class="open-chat__header">
-			<h4 class="open-chat__title">Open Chat</h4>
-			<span>Go to Openchat Home <i class="fa-solid fa-chevron-right fa-xs"></i></span>
-		</div>
-		<div class="open-post">
-			<div class="open-post__column">
-				<h5 class="open-post__title">#BTS</h5>
-				<h6 class="open-post__hashtags">#bts#army#friends</h6>
-				<div class="open-post__members">
-					<img src="http://localhost:63342/kokoa-clone/kokoa-clone/lion.png" alt="">
-					<span class="open-post__member-count">802 members</span>
-					<div class="divider"></div>
-					<span class="open-post__member-status">Active</span>
-				</div>
+<main class="main_screen more-screen">
+	<div class="user-component">
+		<div class="user-component__column">
+			<img class="user-component__avatar user-component__avatar--xl" src="lion.png" alt="">
+			<div class="user-component__text">
+				<h4 class="user-component__title">Mane</h4>
+				<h6 class="user-component__subtitle">+1 787 666 999 <i class="fa-solid fa-circle-exclamation"></i></h6>
 			</div>
-			<div class="open-post__column">
-				<div class="open-post__photo">
-					<img src="http://localhost:63342/kokoa-clone/kokoa-clone/lion.png" alt="">
-					<div class="open-post__heart-count">
-						<i class="fa-solid fa-heart fa-xs"></i><span>326</span></div>
-				</div>
+		</div>
+		<div class="user-component__column">
+			<i class="far fa-message fa-2x"></i>
+		</div>
+	</div>
+	<div class="icon-row">
+		<div class="icon-row__icon"><i class="far fa-calendar"></i><span>Calender</span></div>
+		<div class="icon-row__icon"><i class="fa-solid fa-face-flushed"></i><span>Emoticons</span></div>
+		<div class="icon-row__icon"><i class="fa-solid fa-paint-roller"></i><span>Themes</span></div>
+		<div class="icon-row__icon"><i class="fa-solid fa-file-invoice"></i><span>Account</span></div>
+	</div>
+	<div class="more-suggestions">
+		<h4 class="more-suggestions__title">Suggestions</h4>
+		<div class="more-suggestions__icons">
+			<div class="more-suggestions__icon">
+				<div class="more-suggestions__icon-image"><i class="fa-solid fa-window-restore"></i></div>
+				<span class="more-suggestions__icon-test">Kokoa Story</span>
 			</div>
 		</div>
 	</div>
