--- a/find.html
+++ b/find.html
@@ -29,7 +29,7 @@
 	<h1 class="screen-header_title">Find</h1>
 	<div class="screen-header_icons">
 		<span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
-		<span><i class="fa-solid fa-gear fa-lg"></i>
+		<span><a href="settings.html"></a><i class="fa-solid fa-gear fa-lg"></i>
 			<div class="point"></div>
 		</span>
 	</div>
