--- a/more.html
+++ b/more.html
@@ -30,7 +30,7 @@
 	<div class="screen-header_icons">
 		<span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
 		<span><i class="fa-solid fa-music fa-lg"></i></span>
-		<span><i class="fa-solid fa-gear fa-lg"></i>
+		<span><a href="settings.html"></a><i class="fa-solid fa-gear fa-lg"></i>
 			<div class="point"></div>
 		</span>
 	</div>
@@ -58,6 +58,10 @@
 	<div class="more-suggestions">
 		<h4 class="more-suggestions__title">Suggestions</h4>
 		<div class="more-suggestions__icons">
+			<div class="more-suggestions__icon">
+				<div class="more-suggestions__icon-image"><i class="fa-solid fa-window-restore"></i></div>
+				<span class="more-suggestions__icon-test">Kokoa Story</span>
+			</div>
 			<div class="more-suggestions__icon">
 				<div class="more-suggestions__icon-image"><i class="fa-solid fa-window-restore"></i></div>
 				<span class="more-suggestions__icon-test">Kokoa Story</span>
