--- a/settings.html
+++ b/settings.html
@@ -8,6 +8,7 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Settings - Kokoa Talk</title>
 </head>
+
 <body>
 <div class="status-bar">
 	<div class="status-bar__column">
@@ -25,9 +26,34 @@
 	</div>
 </div>
 
+<header class="alt-header">
+	<div class="alt-header__column">
+		<i class="fas fa-angle-left fa-3x"></i>
+	</div>
+	<div class="alt-header__column">
+		<h1 class="alt-header__title">Settings</h1>
+	</div>
+	<div class="alt-header__column">
+		<span><i class="fas fa-search fa-2x"></i></span>
+	</div>
+</header>
 
-<main class="main_screen more-screen">
-	<
+
+<main class="main_screen">
+	<ul class="settings-list">
+		<li class="settings__setting">
+			<i class="fa-solid fa-bullhorn"></i>
+			<span>Notices</span>
+		</li>
+		<li class="settings__setting">
+			<i class="fa-solid fa-flask"></i>
+			<span>Kokoa Lab</span>
+		</li>
+		<li class="settings__setting">
+			<i class="fa-solid fa-circle-info"></i>
+			<span>Version</span>
+		</li>
+	</ul>
 </main>
 
 <nav class="nav">
