--- a/more.html
+++ b/more.html
@@ -30,7 +30,7 @@
 	<div class="screen-header_icons">
 		<span><i class="fa-solid fa-magnifying-glass fa-lg"></i></span>
 		<span><i class="fa-solid fa-music fa-lg"></i></span>
-		<span><a href="settings.html"></a><i class="fa-solid fa-gear fa-lg"></i>
+		<span><a href="settings.html"><i class="fa-solid fa-gear fa-lg"></i></a>
 			<div class="point"></div>
 		</span>
 	</div>
