--- a/settings.html
+++ b/settings.html
@@ -26,9 +26,12 @@
 	</div>
 </div>
 
-<header class="alt-header">
+<header class="alt-header at">
 	<div class="alt-header__column">
-		<i class="fas fa-angle-left fa-3x"></i>
+		<a href="more.html">
+			<i class="fas fa-angle-left fa-3x"></i>
+		</a>
+
 	</div>
 	<div class="alt-header__column">
 		<h1 class="alt-header__title">Settings</h1>
@@ -42,16 +45,23 @@
 <main class="main_screen">
 	<ul class="settings-list">
 		<li class="settings__setting">
-			<i class="fa-solid fa-bullhorn"></i>
-			<span>Notices</span>
+			<div class="setting__setting-column">
+				<i class="fa-solid fa-bullhorn"></i>
+				<span>Notices</span>
+			</div>
 		</li>
 		<li class="settings__setting">
-			<i class="fa-solid fa-flask"></i>
-			<span>Kokoa Lab</span>
+			<div class="setting__setting-column">
+				<i class="fa-solid fa-flask"></i>
+				<span>Kokoa Lab</span>
+			</div>
 		</li>
 		<li class="settings__setting">
-			<i class="fa-solid fa-circle-info"></i>
-			<span>Version</span>
+			<div class="setting__setting-column">
+				<i class="fa-solid fa-circle-info"></i>
+				<span>Version</span>
+			</div>
+			<div class="setting__setting-column">Latest Version</div>
 		</li>
 	</ul>
 </main>
