--- a/chat.html
+++ b/chat.html
@@ -28,7 +28,7 @@
 
 <header class="alt-header at">
 	<div class="alt-header__column">
-		<a href="more.html">
+		<a href="chats.html">
 			<i class="fas fa-angle-left fa-3x"></i>
 		</a>
 
@@ -43,8 +43,10 @@
 </header>
 
 
-<main class="main_screen">
-
+<main class="main_screen main-chat">
+	<div class="chat__timestamp">
+		Tuesday, June 30, 2022
+	</div>
 </main>
 
 <script src="https://kit.fontawesome.com/493cc16663.js" crossorigin="anonymous">
