--- a/chat.html
+++ b/chat.html
@@ -42,10 +42,20 @@
 	</div>
 </header>
 
-
 <main class="main_screen main-chat">
 	<div class="chat__timestamp">
 		Tuesday, June 30, 2022
+	</div>
+
+	<div class="message-row">
+		<img src="http://localhost:63342/kokoa-clone/kokoa-clone/lion.png" alt="">
+		<div class="message-row__content">
+			<span class="message__author">Mane</span>
+			<div class="message__info">
+				<span class="message__bubble">Hi!</span>
+				<span class="message__time">21:27</span>
+			</div>
+		</div>
 	</div>
 </main>
 
