Write Message Input

--- a/chat.html
+++ b/chat.html
@@ -66,8 +66,21 @@
 			</div>
 		</div>
 	</div>
-
 </main>
+
+<form action="" class="reply">
+	<div class="reply__colum">
+		<i class="far fa-plus-square fa-lg"></i>
+
+	</div>
+	<div class="reply__colum">
+		<input type="text" placeholder="Write a message..."/>
+		<i class="fa-solid fa-face-flushed"></i>
+		<button>
+			<i class="fa-solid fa-arrow-up-long"></i>
+		</button>
+	</div>
+</form>
 
 <script src="https://kit.fontawesome.com/493cc16663.js" crossorigin="anonymous">
 </script>
