--- a/friends.html
+++ b/friends.html
@@ -101,7 +101,9 @@
 		</li>
 	</ul>
 </nav>
-
+<div id="splash-screen">
+	<i class="fa-solid fa-comment fa-2x"></i>
+</div>
 
 <script src="https://kit.fontawesome.com/493cc16663.js" crossorigin="anonymous">
 </script>
