--- a/chat.html
+++ b/chat.html
@@ -81,6 +81,9 @@
 	</div>
 </form>
 
+<div id="no-mobile">
+	<span>Your screen is too big</span>
+</div>
 <script src="https://kit.fontawesome.com/493cc16663.js" crossorigin="anonymous">
 </script>
 </body>
