--- a/chats.html
+++ b/chats.html
@@ -80,7 +80,9 @@
 		</li>
 	</ul>
 </nav>
-
+<div id="no-mobile">
+	<span>Your screen is too big</span>
+</div>
 
 <script src="https://kit.fontawesome.com/493cc16663.js" crossorigin="anonymous">
 </script>
