--- a/friends.html
+++ b/friends.html
@@ -105,6 +105,10 @@
 	<i class="fa-solid fa-comment fa-2x"></i>
 </div>
 
+<div id="no-mobile">
+	<span>Your screen is too big</span>
+</div>
+
 <script src="https://kit.fontawesome.com/493cc16663.js" crossorigin="anonymous">
 </script>
 </body>
